战绩中,不保留小数